--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://seedcard.github.io/seedcardxyz",
+  "homepage": "http://seedcard.github.io/frontend",
   "name": "seedcardwebsite",
   "private": true,
   "version": "0.0.0",
