--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "homepage": "https://seedcard.github.io/frontend",
-  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "start": "serve -s dist",
     "build-css": "tailwindcss build -i ./src/index.css -o ./tailwind.css --watch",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -17,7 +14,8 @@
     "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
