--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ events { worker_connections 1024; }
 
 http {
     server {
-        listen  $PORT;
+        listen  8080;
         root    /app/dist;
         index   index.html;
 
